<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Google, Inc.-->
<com.google.android.gms.ads.formats.NativeContentAdView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/native_ad_frame"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/headline"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/content_ad_headline_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:text="@string/images"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/content_ad_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/content_ad_images_number_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/body"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/ad_body_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/logo"/>

            <ImageView
                android:id="@+id/content_ad_logo_image_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:scaleType="fitCenter"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/call_to_action"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/content_ad_call_to_action_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/advertiser"/>

            <TextView
                android:id="@+id/content_ad_advertiser_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.gms.ads.formats.NativeContentAdView>
