<!-- Copyright (C) 2016 Google, Inc.-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.ads.mediation.testapp.TestInterstitialAdFragment">

    <TextView
        android:id="@+id/title_interstitial_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/title_interstitial_ad_fragment" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_below="@id/title_interstitial_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/load_ad_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/load_ad"/>

        <Button
            android:id="@+id/show_ad_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/show_ad"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/interstitial_ad_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_layout"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/log_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </ScrollView>

</RelativeLayout>
