<!-- Copyright (C) 2016 Google, Inc.-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test_custom_ad_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.google.ads.mediation.testapp.TestCustomAdSizeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_custom_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/title_custom_ad_size_fragment"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp">

                    <EditText
                        android:id="@+id/custom_size_width_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_ad_width"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp">

                    <EditText
                        android:id="@+id/custom_size_height_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_ad_height"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/load_custom_size_ad_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/load_ad" />
        </LinearLayout>

        <TextView
            android:id="@+id/log_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginBottom="8dp"
            android:paddingBottom="8dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <FrameLayout
            android:id="@+id/ad_content_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
